--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -56,6 +56,17 @@
         "--dataset_version",
         "v1"
       ]
+    },
+    {
+      "name": "DW Dataset",
+      "type": "debugpy",
+      "request": "launch",
+      "env": {
+        "CUDA_VISIBLE_DEVICES": "0"
+      },
+      "cwd": "/home/shpark/prj-cmd/simulation/synthetic",
+      "program": "build-synthetic-dataset.py",
+      "console": "integratedTerminal",
     }
   ]
 }
