--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,50 +11,52 @@
       "cwd": "/home/shpark/prj-cmd/simulation",
       "program": "main.py",
       "console": "integratedTerminal",
-      // "args": [
-      //   "--molecule",
-      //   "alanine",
-      //   "--state",
-      //   "c5",
-      //   "--force_field",
-      //   "amber99",
-      //   "--solvent",
-      //   "tip3p",
-      //   "--temperature",
-      //   "200",
-      //   "--time",
-      //   "100",
-      //   "--platform",
-      //   "OpenCL",
-      //   "--precision",
-      //   "mixed",
-      //   "--freq_csv",
-      //   "10"
-      // ]
+      "args": [
+        "--molecule",
+        "alanine",
+        "--state",
+        "c5",
+        "--force_field",
+        "amber99",
+        "--solvent",
+        "tip3p",
+        "--temperature",
+        "300",
+        "--time",
+        "100",
+        "--platform",
+        "OpenCL",
+        "--precision",
+        "mixed",
+        "--log_force",
+        "True",
+        "--index",
+        "debug"
+      ]
     },
     {
-      "name": "MD Dataset",
+      "name": "CL Dataset",
       "type": "debugpy",
       "request": "launch",
       "env": {
         "CUDA_VISIBLE_DEVICES": "0"
       },
       "cwd": "/home/shpark/prj-cmd/simulation",
-      "program": "build_dataset.py",
+      "program": "build_cl_dataset.py",
       "console": "integratedTerminal",
       "args": [
-        "--molecule",
-        "alanine",
-        "--state",
-        "c5",
-        "--temperature",
-        "273.0",
-        "--sim_length",
-        "1000",
-        "--dataset_type",
-        "multi-next-ic",
-        "--dataset_version",
-        "v1"
+          "--molecule",
+          "alanine",
+          "--temperature",
+          "600.0",
+          "--traj_dir",
+          "24-11-11/17:13",
+          "--traj_dir",
+          "24-11-12/10:58",
+          "--preprocess",
+          "distance",
+          "--dataset_version",
+          "debug-distance-v2"
       ]
     },
     {
